--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
       It is about time that I am completing the orientation; I haven't gotten it
       done since the beginning of the year.
     </p>
+    <h2>Section heading</h2>
   </body>
 </html>
